--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ bleach==6.2.0
 certifi==2025.6.15
 cffi==1.17.1
 charset-normalizer==3.4.2
+click==8.2.1
 comm==0.2.2
 debugpy==1.8.14
 decorator==5.2.1
@@ -25,6 +26,7 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+importlib_metadata==8.7.0
 ipykernel==6.29.5
 ipython==9.3.0
 ipython_pygments_lexers==1.1.1
@@ -38,6 +40,7 @@ jsonpointer==3.0.0
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
 jupyter==1.1.1
+jupyter-cache==1.0.1
 jupyter-console==6.6.3
 jupyter-events==0.12.0
 jupyter-lsp==2.2.5
@@ -89,7 +92,9 @@ setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
+SQLAlchemy==2.0.41
 stack-data==0.6.3
+tabulate==0.9.0
 terminado==0.18.1
 tinycss2==1.4.0
 tornado==6.5.1
@@ -105,3 +110,4 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 widgetsnbextension==4.0.14
+zipp==3.23.0
