--- a/_quarto.yml
+++ b/_quarto.yml
@@ -42,7 +42,7 @@ format:
     toc: true
     toc-title: "Contenido"
     number-sections: false
-    code-copy: false # Para que se habilite copiar el codigo
+    code-copy: true # Para que se habilite copiar el codigo
     code-overflow: scroll
     fig-align: center
   pdf:
